<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:id="@+id/daily_weather_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        android:elevation="@dimen/_10sdp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/customer_profile_img_iv"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/profile_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/customer_name_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:fontFamily="@font/associate_sans"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/customer_profile_img_iv"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/customer_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Moatz atteya"
                android:fontFamily="@font/associate_sans"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/customer_profile_img_iv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/customer_name_title_tv"
                />

            <TextView
                android:id="@+id/customer_company_name_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name2"
                android:fontFamily="@font/associate_sans"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/customer_name_title_tv"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/customer_company_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="BrokerAge"
                android:textColor="@color/black"
                android:fontFamily="@font/associate_sans"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/customer_company_name_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/customer_name_title_tv"/>

            <TextView
                android:id="@+id/customer_action_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action"
                android:fontFamily="@font/associate_sans"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/customer_company_name_title_tv"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/customer_action_type_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Call"
                android:textColor="@color/black"
                android:fontFamily="@font/associate_sans"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/customer_action_type_title"
                app:layout_constraintTop_toBottomOf="@+id/customer_company_name_title_tv"/>

            <TextView
                android:id="@+id/customer_action_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_time"
                android:fontFamily="@font/associate_sans"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customer_action_type_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/customer_action_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="22/9/2012 12:30 AM"
                android:textColor="@color/black"
                android:fontFamily="@font/associate_sans"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/customer_action_time_title"
                app:layout_constraintTop_toBottomOf="@+id/customer_action_type_title"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>