<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.customer.customer_details.ui.CustomerDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/arrow_small_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/add_customer_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/associate_sans_bold"
            android:text="Customer details:"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintStart_toEndOf="@id/back_btn"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/daily_weather_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="20dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/customer_profile_img_iv"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/profile_pic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/customer_name_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/associate_sans_bold"
                    android:text="@string/customer_name"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toEndOf="@+id/customer_profile_img_iv"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/customer_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/associate_sans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/customer_name_title_tv"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Moatz atteya" />

                <TextView
                    android:id="@+id/customer_company_name_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/associate_sans_bold"
                    android:text="@string/company_name2"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toEndOf="@+id/customer_profile_img_iv"
                    app:layout_constraintTop_toBottomOf="@+id/customer_name_title_tv" />

                <TextView
                    android:id="@+id/customer_company_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/associate_sans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/customer_company_name_title_tv"
                    app:layout_constraintTop_toBottomOf="@+id/customer_name_title_tv"
                    tools:text="Moatz" />

                <ImageView
                    android:id="@+id/customer_email_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:src="@drawable/email_colored"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customer_profile_img_iv"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/customer_email_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:fontFamily="@font/associate_sans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/customer_mobile_number_iv"
                    app:layout_constraintTop_toBottomOf="@+id/customer_profile_img_iv"
                    tools:text="Moatz@gmail.com" />

                <ImageView
                    android:id="@+id/customer_mobile_number_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:src="@drawable/phone_call"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customer_email_iv"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/customer_mobile_number_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/associate_sans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/customer_mobile_number_iv"
                    app:layout_constraintTop_toBottomOf="@+id/customer_email_iv"
                    tools:text="01147659233" />

                <ImageView
                    android:id="@+id/company_mobile_number_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:src="@drawable/phone_office_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customer_mobile_number_iv"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/company_mobile_number_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:fontFamily="@font/associate_sans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/customer_mobile_number_iv"
                    app:layout_constraintTop_toBottomOf="@+id/customer_mobile_number_iv"
                    tools:text="35625365" />

                <TextView
                    android:id="@+id/company_information_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/associate_sans"
                    android:maxLines="5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_mobile_number_iv"
                    tools:text="Company information: wood company" />


                <TextView
                    android:id="@+id/customer_available_actions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/associate_sans"
                    android:maxLines="5"
                    android:text="@string/available_actions"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_information_tv" />

                <TextView
                    android:id="@+id/call_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/button_rounded_background"
                    android:backgroundTint="#C4FDF8"
                    android:drawableEnd="@drawable/phone_call_solid"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/associate_sans"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/call"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:foreground="?selectableItemBackground"
                    app:layout_constraintEnd_toStartOf="@id/visit_action"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customer_available_actions" />

                <TextView
                    android:id="@+id/visit_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/button_rounded_background"
                    android:backgroundTint="#C4FDF8"
                    android:drawableEnd="@drawable/marker_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/associate_sans"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/visit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:foreground="?selectableItemBackground"
                    app:layout_constraintEnd_toStartOf="@+id/follow_up_action"
                    app:layout_constraintStart_toEndOf="@id/call_action"
                    app:layout_constraintTop_toBottomOf="@+id/customer_available_actions" />

                <TextView
                    android:id="@+id/follow_up_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/button_rounded_background"
                    android:backgroundTint="#C4FDF8"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/associate_sans"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/follow_up"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    app:drawableEndCompat="@drawable/follow_up"
                    android:foreground="?selectableItemBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/visit_action"
                    app:layout_constraintTop_toBottomOf="@+id/customer_available_actions" />

                <TextView
                    android:id="@+id/delete_customer_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:fontFamily="@font/associate_sans"
                    android:text="Delete Customer"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_15sdp"
                    android:foreground="?selectableItemBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/call_action" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>